init api documentation
